This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
9/18/17: Enabled saving or aligning frames in the SEMCCD plugin for OneView
and Rio cameras, just as for K2/K3, and add general framework from
saving/aligning frames in SerialEM for other cameras.

9/18/17: Added DoLoop command with index variable and start, end, and
increment values.

9/18/17: Beam shift in scope control panel now does diffraction shift in
diffraction mode.

9/18/17: Added script commands for getting a vacuum gauge value and
controlling stage piezos on JEOLs.

9/10/19: Enabled screen current output on Hitachi (In 3.7).

9/5/19: Fixed setting of probe mode for first area entered after turning on
low dose mode while in LM.

9/5/19: Mag spinner in scope control panel now controls camera length in
diffraction mode - may require NumberOfCameraLengths property.

8/27/19: Fixed adjustment of mouse stage shift for tilt on Hitachi (In 3.7).

8/27/19: Fixed "Add Stage Pos" in Navigator to exclude low dose area shift and
offset (In 3.7).

8/26/19: Added script command to center on a point marked on a higher mag map
that can be aligned to in two rounds with Realign to Item.  Also added
commands to set a map acquire state, restore state, and report Navigator index
of map that an item was drawn on.

8/26/19: Changed angle of first shot in multi-shot routine to be on short axis
of camera unless tilted.

8/23/19: Added property to enable restoring stage and Y position after each
tilt in eucentricity routines.

8/23/19: Improved defect correction of more than 4 lines to reduce structure
in corrected patch; added defect correction of K2/K3 images if there are any
bad line or pixel entries in properties.

8/21/19: Changed montage pre-cooking with ability to skip every other column,