@@ -248,12 +248,15 @@
       want different brightness settings, in which case you would have this option 
       selected while positioning the areas, then unselected to adjust the brightness 
       of one.</P>
-    <P><B>Copy current area mag &amp; beam to </B>
-    </P>
-    <P>These buttons will copy the exposure parameters (but not the location) of the 
-      current area to one of the 5 areas: View, Focus, Trial, Record, or Search. This would 
+    <P><B>Copy current area settings to V - F - T - R - S</B></P>
+    <P>These buttons will generally copy all properties except the axis position from the 
+      current area to one of the 5 areas: View, Focus, Trial, Record, or Search.&nbsp; 
+      When copying between View and Search, the defocus and shift offsets are copied 
+      as well.&nbsp; When copying to Record, the beam shift and tilt offsets will be 
+      set to zero rather than copied, since Record is supposed to be the reference for 
+      these offsets.&nbsp; Copy would 
       be useful mostly when initially setting up the areas. Because they are easily 
-      mistaken for acquisition buttons, a message box will appear asking you to 
+      mistaken for the &#39;Go to area&#39; buttons, a message box will appear asking you to 
       confirm the copy.</P>
     <P><B>Center Unshifted</B></P>
     <P>When you push this button, the View and Record areas will be set to have no 
