@@ -3,6 +3,13 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+9/24/19: Fixed copying of low dose areas to handle shift and defocus offsets
+properly for View and Search, and to not copy additional beam shift/tilt to
+Record (In 3.7).
+
+9/24/19: Fixed area measurement that make "Add grid like last" to fill largest
+instead of smallest polygon/map that point is in (in 3.7).
+
 9/18/17: Enabled saving or aligning frames in the SEMCCD plugin for OneView
 and Rio cameras, just as for K2/K3, and add general framework from
 saving/aligning frames in SerialEM for other cameras.
